# gtm-automation-linkedin

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  migrate_csv_to_db.py  pyproject.toml  report.py  run.py  setup_session.py
crm/: base.py  db.py  instantly.py  leads.py
linkedin/: browser.py  connect.py  inbox.py  inmail.py  message.py  sales_nav.py  scraper.py  utils.py
workflows/: check_status.py  outreach.py  report.py  sales_nav_outreach.py
